# DTaint

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  clang-llvm-install.sh  dfsan_abilist.txt  libexif_abilist.txt  openjpeg_abilist.txt  taint_abilist.txt
example/: 1  3  CMakeCache.txt  Makefile  dump.txt  dump2  float_test  float_test.c  float_test.h  target  target.c  target.ll  target1  target_origin  test  test.bc  test.cpp  test.id0  test.id1  test.id2  test.ll  test.nam  test.til  test.txt  test1.txt  test2.bc  test2.txt  test_no_inst
example/hook_test/: Makefile  hook3_test  hook3_test_afl  hook4_test  hook4_test_afl  hook5_test  hook5_test_afl  hook6_test  hook6_test.c  hook6_test_afl  va_arg_hook1_test  va_arg_hook1_test.c  va_arg_hook1_test_afl  va_arg_hook1_test_with_constraint  va_arg_hook1_test_with_constraint.c  va_arg_hook1_test_with_constraint_afl
example/memlog/: Makefile  hook3_test  hook3_test.c  hook3_test_afl  hook4_test  hook4_test.c  hook4_test_afl  hook5_test  hook5_test.c  hook5_test_afl  hook6_test  hook6_test_afl  test.txt  va_arg_hook1_test  va_arg_hook1_test.c  va_arg_hook1_test_afl
example/memlog/testcases/: test.txt
src/: CMakeLists.txt
src/abilist/: CMakeLists.txt  done_abilist.txt  hook_abilist.txt  libc_ubuntu1404_abilist.txt
src/afl_rt/: CMakeLists.txt  afl-compiler-rt.o.c
src/afl_rt/include/: config.h
src/compiler/: CMakeLists.txt  clang_wrapper.c
src/dfsan_rt/: CMakeLists.txt
src/dfsan_rt/cmake/: SanitizerUtils.cmake
src/dfsan_rt/dfsan/: CMakeLists.txt  dfsan.cpp  dfsan.h  dfsan_custom.cpp  dfsan_io.cpp  dfsan_platform.h  done_abilist.txt  event_callback.c  event_callback.cpp
src/dfsan_rt/extension/: dfsan_hook.cpp  dfsan_union_t.cpp
src/dfsan_rt/extension/include/: dfsan_hook.h  dfsan_union_t.h  dtaint.h
src/dfsan_rt/runtime/: CMakeLists.txt  dfsan_hook.cpp  dfsan_union_t.cpp
src/dfsan_rt/runtime/include/: dfsan_hook.h  dfsan_union_t.h  dtaint.h
src/memlog_rt/: CMakeLists.txt  memlog.c
src/memlog_rt/include/: memlog.h
src/pass/: CMakeLists.txt  DFSanHookPass.cc  DataFlowSanitizer.cpp  MemlogPass.cc  TaintPass.cc
src/taint_rt/: CMakeLists.txt  taint.c
test/: .hookID.txt  atexit_test  atexit_test.cpp  atexit_test_in_preinit.cpp  bit_fields_test  init_test  init_test.c  mmap_test  mmap_test.c  preinit_test  preinit_test.c  shm_test  shm_test.c  test.c  test.txt  va_test.c
test/environment/: bit_fields_test.c  color_test.c  env_child_test.c  env_test.c  float_test  float_test.c  fstream_test  fstream_test.cpp  getElementPtr_example.c  getElementPtr_example.ll  init_test  opt_priority_test.c  pthread_test.c  strchr_test.c  test  typedef_test.c  union_test  union_test.c  va_test  wait_test.c
test/hook_test/: Makefile  dtaint  dump.txt  hook3_test.c  hook3_test_afl  hook4_test.c  hook4_test_afl  hook5_test.c  hook5_test_afl  hook6_test_afl  memlog  test.txt  va_arg_hook1_test.c  va_arg_hook1_test_afl  va_arg_hook1_test_with_constraint  va_arg_hook1_test_with_constraint_afl
tools/: 1  2  gen_library_abilist.sh  gen_target_abilist.sh  gen_udr_abilist.sh  instrument_compiler_debug.sh  instrument_debug.sh  instrument_debug_single.sh
